--- a/musics.htm
+++ b/musics.htm
@@ -64,7 +64,7 @@
 
 <div class="row">
     <div class="col-sm-4" style="background-color: rgba(140,50,204,0.5);">
-<audio controls autoplay>
+<audio controls>
 	<source src="benden_sonra.mp3" type="audio/mpeg">
 	<source src="benden_sonra.ogg" type="audio/ogg">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
@@ -117,7 +117,7 @@
 </div>
 
 <div class="col-sm-4" style="background-color: rgba(230,230,250,0.8);">
-<audio controls autoplay>
+<audio controls>
 	<source src="heros.mp3" type="audio/mpeg">
 	<source src="heros.ogg" type="audio/ogg">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
@@ -182,7 +182,7 @@
 </div>
 
 <div class="col-sm-4" style="background-color: rgba(255,240,245,0.6);">
-<audio controls autoplay>
+<audio controls>
 	<source src="afire_love.mp3" type="audio/mpeg">
 	<source src="afire_love.ogg" type="audio/ogg">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
@@ -261,7 +261,7 @@
 </div>
 
 <div class="col-sm-4" style="background-color: rgba(255,165,0,0.5);">
-<audio controls autoplay>
+<audio controls>
 	<source src="hirka.mp3" type="audio/mpeg">
 	<source src="hirka.ogg" type="audio/ogg">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
@@ -303,7 +303,7 @@
 </div>
 
 <div class="col-sm-4" style="background-color: rgba(75,170,130,0.5);">
-<audio controls autoplay>
+<audio controls>
 	<source src="jest_oldu.mp3" type="audio/mpeg">
 	<source src="jest_oldu.ogg" type="audio/ogg">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
@@ -353,7 +353,7 @@
 </div>
     
     <div class="col-sm-4" style="background-color: rgba(255,99,71,0.5);">
-        <audio controls autoplay>
+        <audio controls>
             <source src="askyasalcinayet.mp3" type="audio/mpeg">
             <source src="askyasalcinayet.ogg" type="audio/ogg">
             <p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
