--- a/musics.htm
+++ b/musics.htm
@@ -64,7 +64,7 @@
 
 <div class="row">
     <div class="col-sm-4" style="background-color: rgba(140,50,204,0.5);">
-<audio controls="controls" autoplay="false">
+<audio controls="controls" autoplay="0">
 	<source src="benden_sonra.mp3" type="audio/mpeg" autostart="0">
 	<source src="benden_sonra.ogg" type="audio/ogg" autostart="0">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
