--- a/musics.htm
+++ b/musics.htm
@@ -64,9 +64,9 @@
 
 <div class="row">
     <div class="col-sm-4" style="background-color: rgba(140,50,204,0.5);">
-<audio controls="controls" autoplay="1">
-	<source src="benden_sonra.mp3" type="audio/mpeg" autostart="1">
-	<source src="benden_sonra.ogg" type="audio/ogg" autostart="1">
+<audio controls>
+	<source src="benden_sonra.mp3" type="audio/mpeg">
+	<source src="benden_sonra.ogg" type="audio/ogg">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
 </audio>
 
@@ -118,8 +118,8 @@
 
 <div class="col-sm-4" style="background-color: rgba(230,230,250,0.8);">
 <audio controls>
-	<source src="heros.mp3" type="audio/mpeg" autostart="0">
-	<source src="heros.ogg" type="audio/ogg" autostart="0">
+	<source src="heros.mp3" type="audio/mpeg">
+	<source src="heros.ogg" type="audio/ogg">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
 </audio>
 
@@ -183,8 +183,8 @@
 
 <div class="col-sm-4" style="background-color: rgba(255,240,245,0.6);">
 <audio controls>
-	<source src="afire_love.mp3" type="audio/mpeg"autostart="0">
-	<source src="afire_love.ogg" type="audio/ogg"autostart="0">
+	<source src="afire_love.mp3" type="audio/mpeg">
+	<source src="afire_love.ogg" type="audio/ogg">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
 </audio>
 
@@ -262,8 +262,8 @@
 
 <div class="col-sm-4" style="background-color: rgba(255,165,0,0.5);">
 <audio controls>
-	<source src="hirka.mp3" type="audio/mpeg"autostart="0">
-	<source src="hirka.ogg" type="audio/ogg"autostart="0">
+	<source src="hirka.mp3" type="audio/mpeg">
+	<source src="hirka.ogg" type="audio/ogg">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
 </audio>
 
@@ -304,8 +304,8 @@
 
 <div class="col-sm-4" style="background-color: rgba(75,170,130,0.5);">
 <audio controls>
-	<source src="jest_oldu.mp3" type="audio/mpeg"autostart="0">
-	<source src="jest_oldu.ogg" type="audio/ogg"autostart="0">
+	<source src="jest_oldu.mp3" type="audio/mpeg">
+	<source src="jest_oldu.ogg" type="audio/ogg">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
 </audio>
 
@@ -354,8 +354,8 @@
     
     <div class="col-sm-4" style="background-color: rgba(255,99,71,0.5);">
         <audio controls>
-            <source src="askyasalcinayet.mp3" type="audio/mpeg"autostart="0">
-            <source src="askyasalcinayet.ogg" type="audio/ogg"autostart="0">
+            <source src="askyasalcinayet.mp3" type="audio/mpeg">
+            <source src="askyasalcinayet.ogg" type="audio/ogg">
             <p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
         </audio>
 
