--- a/musics.htm
+++ b/musics.htm
@@ -64,11 +64,10 @@
 
 <div class="row">
     <div class="col-sm-4" style="background-color: rgba(140,50,204,0.5);">
-<audio controls="controls" autoplay="1">
-	<source src="benden_sonra.mp3" type="audio/mpeg" autostart="1">
-	<source src="benden_sonra.ogg" type="audio/ogg" autostart="1">
+
+	<embed src="benden_sonra.mp3" type="audio/mpeg" autoplay="false"></embed>
+	<embed src="benden_sonra.ogg" type="audio/ogg" autostart="1">
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
-</audio>
 
     <pre>
     <h3>BENDEN SONRA LYRICS</h3>
