--- a/musics.htm
+++ b/musics.htm
@@ -64,15 +64,11 @@
 
 <div class="row">
     <div class="col-sm-4" style="background-color: rgba(140,50,204,0.5);">
-<<<<<<< HEAD
-
-	<embed src="benden_sonra.mp3" type="audio/mpeg" autoplay="false" controls="true"></embed>
-	<embed src="benden_sonra.ogg" type="audio/ogg" autoplay="false" controls="true"></embed
-=======
 <audio controls>
 	<source src="benden_sonra.mp3" type="audio/mpeg">
 	<source src="benden_sonra.ogg" type="audio/ogg">
->>>>>>> a321957d2dd79e13cd5174f01318ba17239b680a
+    </audio>
+
 	<p>Sorry! You're browser does not support the <i>audio</i> tag.</p>
 
     <pre>
