--- a/films.htm
+++ b/films.htm
@@ -55,7 +55,7 @@
  </ul>
 </div>
 </nav>
-    <h1>My Favourite Films</h1>
+    <h1 style="background-color: white;">My Favourite Films</h1>
 
     <div class="row" style="background-color: rgba(255,255,255,0.3);">
     <div class="col-sm-12">
