--- a/register.htm
+++ b/register.htm
@@ -91,57 +91,57 @@
 	</div>
 
 		<p><b>Mark Your Interest:</b></p>
-		<div class="form-check-inline">
+		<div class="form-check">
 		<label for="check1">
-		<input type="checkbox" class="form-control" name="reading book" id="interests">Reading Book
+			<input type="checkbox" class="form-control" name="reading book" id="interests" style="width: 30px; height: 30px;">Reading Book
 	</label>
 	</div>
 
-		<div class="form-check-inline">
+		<div class="form-check">
 		<label for="check1">
-		<input type="checkbox" class="form-control" name="movies" id="interests">Movies
+		<input type="checkbox" class="form-control" name="movies" id="interests"style="width: 30px; height: 30px;">Movies
 		</label>
 	</div>
 
-		<div class="form-check-inline">
+		<div class="form-check">
 		<label for="check2">
-		<input type="checkbox" class="form-control" name="programming" id="interests">Programming
+		<input type="checkbox" class="form-control" name="programming" id="interests"style="width: 30px; height: 30px;">Programming
 		</label>
 	</div>
 
-		<div class="form-check-inline">
+		<div class="form-check">
 		<label for="check3">
-		<input type="checkbox" class="form-control" name="space" id="interests">Space
+		<input type="checkbox" class="form-control" name="space" id="interests"style="width: 30px; height: 30px;">Space
 		</label>
 	</div>
 
-		<div class="form-check-inline">
+		<div class="form-check">
 		<label for="check4">
-		<input type="checkbox" class="form-control" name="technology" id="interests">Technology
+		<input type="checkbox" class="form-control" name="technology" id="interests"style="width: 30px; height: 30px;">Technology
 		</label>
 	</div>
 
-		<div class="form-check-inline">
+		<div class="form-check">
 		<label for="check5">
-		<input type="checkbox" class="form-control" name="musics" id="interests">Musics
+		<input type="checkbox" class="form-control" name="musics" id="interests"style="width: 30px; height: 30px;">Musics
 		</label>
 	</div>
 
-		<div class="form-check-inline">
+		<div class="form-check">
 		<label for="check6">
-		<input type="checkbox" class="form-control" name="Animals" id="interests">Animals
+		<input type="checkbox" class="form-control" name="Animals" id="interests"style="width: 30px; height: 30px;">Animals
 		</label>
 	</div>
 
-		<div class="form-check-inline">
+		<div class="form-check">
 		<label for="check7">
-		<input type="checkbox" class="form-control" name="politics" id="interests">Politics
+		<input type="checkbox" class="form-control" name="politics" id="interests"style="width: 30px; height: 30px;">Politics
 		</label>
 	</div>
 
-		<div class="form-check-inline">
+		<div class="form-check">
 		<label for="check8">
-		<input type="checkbox" class="form-control" name="Auto" id="interests">Auto
+		<input type="checkbox" class="form-control" name="Auto" id="interests"style="width: 30px; height: 30px;">Auto
 		</label>
 	</div><br>
 <center>
